Resolve several Sonar findings